# gans-image-generation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/config/: __init__.py
src/data/: __init__.py
src/model/discriminator/: __init__.py
src/model/generative/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
